--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "devDependencies": {
-    "vuepress": "^2.0.0-beta.60"
+    "vuepress": "^2.0.0-beta.60",
+    "vuepress-plugin-md-enhance": "^2.0.0-beta.173"
   },
   "dependencies": {
     "vuepress-theme-reco": "^2.0.0-beta.48"
