--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
     "vuepress-plugin-md-enhance": "^2.0.0-beta.173"
   },
   "dependencies": {
+    "@vuepress/client": "2.0.0-beta.60",
+    "vue": "^3.2.45",
     "vuepress-theme-reco": "^2.0.0-beta.48"
   }
 }
