--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@vuepress/client": "2.0.0-beta.60",
     "vue": "^3.2.47",
-    "vuepress-theme-reco": "^2.0.0-beta.48"
+    "vuepress-theme-reco": "^2.0.0-beta.48",
+    "vuepress-vite": "^2.0.0-beta.60"
   }
 }
