--- a/package.json
+++ b/package.json
@@ -4,9 +4,6 @@
     "vuepress-plugin-md-enhance": "^2.0.0-beta.174"
   },
   "dependencies": {
-    "@vuepress/client": "2.0.0-beta.60",
-    "vue": "^3.2.47",
-    "vuepress-theme-reco": "^2.0.0-beta.48",
-    "vuepress-vite": "^2.0.0-beta.60"
+    "vuepress-theme-reco": "^2.0.0-beta.48"
   }
 }
