--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
   "devDependencies": {
-    "vuepress": "^2.0.0-beta.60",
-    "vuepress-plugin-md-enhance": "^2.0.0-beta.173"
+    "@vuepress/plugin-search": "^2.0.0-beta.61",
+    "vuepress": "^2.0.0-beta.61",
+    "vuepress-plugin-md-enhance": "^2.0.0-beta.197"
   },
-  "dependencies": {
-    "vuepress-theme-reco": "^2.0.0-beta.48"
-  }
+  "dependencies": {}
 }
